# pi4b_ros2

./: README.md  check.py  cost_cache.json  eye.py  eye_draw.py  eye_fullscreen.py  eye_two_simple.py  key  launch_robot.sh  nav.sh  nav2.sh  run.sh  rviz2_config.rviz  start.sh  start_imu.sh  test.py  waypoint_cache.json  web_bridge.py
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: yolo_detect_standalone.py
src/bot_application/: param.txt  setup.py
src/bot_application/bot_application/: dp_cost_cache.json  dp_waypoint_cache.json  ga_cost_cache.json  ga_waypoint_cache.json  init_robot_pose.py  navigator_full_dp copy.py  navigator_full_dp.py  navigator_full_ga.py  optimized_navigator.py  optimized_navigator_dp.py  waypoint_follower.py  waypoint_selector.py
src/bot_description/: CMakeLists.txt
src/bot_description/config/: ekf.yaml  my_robot.lua
src/bot_description/launch/: backpack_2d.launch.py  display_robot.launch.py
src/bot_description/urdf/: 4wd.urdf.xacro
src/bot_localization/: CMakeLists.txt
src/bot_localization/config/: ekf.yaml
src/bot_localization/launch/: localization.launch.py
src/bot_navigation2/: CMakeLists.txt
src/bot_navigation2/config/: backpack_2d_localization.lua  localization.lua  nav2_params.yaml  nav2_params.yaml.backup
src/bot_navigation2/launch/: bringup_launch_cartographer.launch.py  navigation2.launch.py  navigation2_cartographer.launch.py
src/test_control_pkg/: package.xml  setup.cfg  setup.py
src/yolo_counting_pkg/: package.xml  setup.cfg  setup.py  weight_calc_input.json
(+123 files in other folders)
